feat(api): implement API key authentication for api v2
